--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -63,3 +63,49 @@
 	Title = {Minimum energy to send $k$ bits with and without feedback},
 	Volume = 57,
 	Year = 2011}
+
+
+
+@article{kostina2011fixed,
+	Author = {Kostina, V. and Verd\'{u}, S.},
+	Journal = {IEEE Transactions on Information Theory},
+	Month = {June},
+	Number = {6},
+	Pages = {3309--3338},
+	Title = {Fixed-length lossy compression in the finite blocklength regime},
+	Volume = {58},
+	Year = {2012}}
+
+
+
+@article{kostina2012jscc,
+	Author = {Kostina, Victoria and Verd\'{u}, Sergio},
+	Journal = {IEEE Transactions on Information Theory},
+	Month = {May},
+	Number = {5},
+	Pages = {2545--2575},
+	Title = {Lossy joint source-channel coding in the finite blocklength regime},
+	Volume = {59},
+	Year = {2013}}
+	
+	
+
+@article{kostina2015varrate,
+	Author = {Kostina, Victoria and Polyanskiy, Yury and Verd{\'u}, Sergio},
+	Journal = {IEEE Transactions on Information Theory},
+	Month = {Aug.},
+	Number = {9},
+	Pages = {4316--4330},
+	Title = {Variable-length compression allowing errors},
+	Volume = {61},
+	Year = {2015}}
+	
+
+@inproceedings{kostina2013ITWnoisysc,
+	Address = {Seville, Spain},
+	Author = {Kostina, Victoria and Verd\'{u}, Sergio},
+	Booktitle = {Proceedings 2013 IEEE Information Theory Workshop},
+	Month = {Sep.},
+	Title = {Nonasymptotic noisy lossy source coding},
+	Year = {2013}}
+	
