manual: typo fixed (but snr6eps03M2 image still not generated properly)

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -269,7 +269,7 @@ General info:
 
    \begin{figure}[t]
     \centering
-      \includegraphics[width=20cm]{./plots/snr6eps03M2}
+      \includegraphics[width=.9\textwidth]{./plots/snr6eps03M2}
     \caption{Maximum coding rate $R^\ast(n_c,l,\epsilon,\rho)$ for $2\times 2$ MIMO system operating over a Rayleigh block-fading channel with coherence time $n_c$.
     Each packet spans~$l$ coherence intervals. The packet size is $168$ channel uses. The packet error rate is $\epsilon=10^{-3}$.
     The SNR is $\rho=6$ dB.}
