--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -18,6 +18,12 @@
 
 @string{j_ppi = {Prob. Peredachi Inform.}}
 
+@article{erseghe2015coding,
+  title={Coding in the Finite-Blocklength Regime: Bounds based on Laplace Integrals and their Asymptotic Approximations},
+  author={Erseghe, Tomaso},
+  journal={arXiv preprint arXiv:1511.04629},
+  year={2015}
+}
 
 @article{yang14-07a,
 	Author = {Yang, W. and Durisi, G. and Koch, T. and Polyanskiy, Y.},
