--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -124,3 +124,11 @@
 	Month = jul,
 	Title = {Minimum energy to send $k$ bits over multiple-antenna fading channels},
 	Year = 2015}
+@article{YP12,
+  title={Saddle point in the minimax converse for channel coding},
+  author={Polyanskiy, Y.},
+  journal=IEEE_J_IT, month=may, year=2012, note="submitted",
+  url={http://people.lids.mit.edu/yp/homepage}
+}
+
+
