reference list updated

--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Giuseppe Durisi at 2015-09-13 20:38:03 +0200 
+%% Created for Giuseppe Durisi at 2016-09-02 07:36:22 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,12 +18,12 @@
 
 @string{j_ppi = {Prob. Peredachi Inform.}}
 
+
 @article{erseghe2015coding,
-  title={Coding in the Finite-Blocklength Regime: Bounds based on Laplace Integrals and their Asymptotic Approximations},
-  author={Erseghe, Tomaso},
-  journal={arXiv preprint arXiv:1511.04629},
-  year={2015}
-}
+	Author = {Erseghe, Tomaso},
+	Journal = {arXiv preprint arXiv:1511.04629},
+	Title = {Coding in the Finite-Blocklength Regime: Bounds based on Laplace Integrals and their Asymptotic Approximations},
+	Year = {2015}}
 
 @article{yang14-07a,
 	Author = {Yang, W. and Durisi, G. and Koch, T. and Polyanskiy, Y.},
@@ -52,12 +52,15 @@
 @article{durisi14-12a,
 	Author = {Giuseppe Durisi and Tobias Koch and Johan \"{O}stman and Yury Polyanskiy and Wei Yang},
 	Date-Added = {2014-12-09 14:07:56 +0000},
-	Date-Modified = {2015-09-13 18:38:02 +0000},
+	Date-Modified = {2016-09-02 05:36:21 +0000},
+	Journal = {IEEE_J_COM},
 	Keywords = {giuseppe},
-	Month = dec,
+	Month = feb,
+	Number = {2},
+	Pages = {618-629},
 	Title = {Short-Packet Communications over Multiple-Antenna {Rayleigh}-Fading Channels},
-	Url = {http://arxiv.org/abs/1412.7512},
-	Year = {2014},
+	Volume = {64},
+	Year = {2016},
 	Bdsk-Url-1 = {http://arxiv.org/abs/1412.7512}}
 
 @article{PPV08,
@@ -90,8 +93,6 @@
 	Volume = {58},
 	Year = {2012}}
 
-
-
 @article{kostina2012jscc,
 	Author = {Kostina, Victoria and Verd\'{u}, Sergio},
 	Journal = {IEEE Transactions on Information Theory},
@@ -101,8 +102,6 @@
 	Title = {Lossy joint source-channel coding in the finite blocklength regime},
 	Volume = {59},
 	Year = {2013}}
-	
-	
 
 @article{kostina2015varrate,
 	Author = {Kostina, Victoria and Polyanskiy, Yury and Verd{\'u}, Sergio},
@@ -113,7 +112,6 @@
 	Title = {Variable-length compression allowing errors},
 	Volume = {61},
 	Year = {2015}}
-	
 
 @inproceedings{kostina2013ITWnoisysc,
 	Address = {Seville, Spain},
@@ -122,7 +120,7 @@
 	Month = {Sep.},
 	Title = {Nonasymptotic noisy lossy source coding},
 	Year = {2013}}
-	
+
 @article{YDP15,
 	Author = {W. Yang and G. Durisi and Y. Polyanskiy},
 	Date-Modified = {2015-09-13 18:36:05 +0000},
@@ -130,11 +128,15 @@
 	Month = jul,
 	Title = {Minimum energy to send $k$ bits over multiple-antenna fading channels},
 	Year = 2015}
+
 @article{YP12,
-  title={Saddle point in the minimax converse for channel coding},
-  author={Polyanskiy, Y.},
-  journal=IEEE_J_IT, month=may, year=2012, note="submitted",
-  url={http://people.lids.mit.edu/yp/homepage}
-}
-
-
+	Author = {Polyanskiy, Y.},
+	Date-Modified = {2016-09-02 05:34:53 +0000},
+	Journal = IEEE_J_IT,
+	Month = jul,
+	Number = {7},
+	Pages = {2576-2595},
+	Title = {Saddle point in the minimax converse for channel coding},
+	Volume = {59},
+	Year = 2013,
+	Bdsk-Url-1 = {http://people.lids.mit.edu/yp/homepage}}
